# SIS_CG_LIB

./: CMakeLists.txt  Readme.md
Source/: tests.cpp
sources/: main.cpp  vec3.cpp
